--- a/src/components/HeaderSlider/HeaderSlider.css
+++ b/src/components/HeaderSlider/HeaderSlider.css
@@ -4,7 +4,8 @@
     width: 800px;
     margin-top: 50px;
     height: 300px;
-
+    background-color: #303030;
+    border-radius: 25px;
 }
 
 .sliderPicture {
